--- a/style.css
+++ b/style.css
@@ -9,6 +9,9 @@ body{
 }
 .right{
     width: 75vw;
+        background-color: rgba(128, 128, 128, 0.222);
+    padding: 5px;
+    margin: 0;
 }
 nav ul{
      gap: 20px;
@@ -118,8 +121,9 @@ nav ol div li:hover{
 }
 .library{
     background-color: rgba(128, 128, 128, 0.16);
-    padding: 5px;
+    padding: 7px;
     margin: 0;
+    /* height: 90vh; */
 }
 .heading{
     display: flex;
@@ -249,9 +253,48 @@ div  h3:hover{
 .language >div{
     padding: 5px;
 }
-/* .add:hover{
+/* .add{
     background-color: grey;
     border-radius: 50%;
     width: 40px;
     height: 40px;
+    align-items: center;
 } */
+.right{
+
+}
+.header2{
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+      font-family: "Poppins", sans-serif;
+  font-weight: 700;
+  font-style: normal;
+  font-size: 20px;
+  margin: 10px;
+  padding: 10px;
+}
+.showall{
+    font-size: 12px;
+    color: grey;
+}
+.cardContainer div{
+    padding: 20px;
+    gap: 20px;
+}
+.card{
+    width: 10vw;
+    padding: 0px;
+    border-radius: 7px;
+    background-color: grey;
+    margin: auto;
+}
+.card img{
+    border-radius: 7px;
+}
+.card h2{
+     font-family: "Poppins", sans-serif;
+  font-weight: 300;
+  font-style: normal;
+  font-size: 16px;
+}
