--- a/utilities.css
+++ b/utilities.css
@@ -1,6 +1,6 @@
 .border{
-    border: 2px solid yellow;
-    margin: 10px;
+    border: 2px ;
+    margin: 5px;
     border-radius: 10px;
 }
 .flex{
