--- a/style.css
+++ b/style.css
@@ -9,9 +9,14 @@ body{
 }
 .right{
     width: 75vw;
-        background-color: rgba(128, 128, 128, 0.222);
+ background: linear-gradient(to bottom, rgb(38, 37, 37), black);
     padding: 5px;
     margin: 0;
+}
+nav{
+    margin: 0px;
+    height: 8vh;
+    top: 0;
 }
 nav ul{
      gap: 20px;
@@ -118,6 +123,9 @@ nav ol div li:hover{
     color: black;
     height: 44px;
     width: 5.1vw;
+}
+.container{
+    margin: 0px;
 }
 .library{
     background-color: rgba(128, 128, 128, 0.16);
@@ -260,9 +268,7 @@ div  h3:hover{
     height: 40px;
     align-items: center;
 } */
-.right{
 
-}
 .header2{
     display: flex;
     align-items: center;
@@ -281,14 +287,19 @@ div  h3:hover{
 .cardContainer div{
     padding: 20px;
     gap: 20px;
+    margin: 10px;
 }
 .card{
     width: 10vw;
     padding: 0px;
     border-radius: 7px;
-    background-color: grey;
+    background-color: rgba(128, 128, 128, 0);
     margin: auto;
+    position: relative;
+    align-items: center;
+    /* height: 33vh; */
 }
+
 .card img{
     border-radius: 7px;
 }
@@ -297,4 +308,38 @@ div  h3:hover{
   font-weight: 300;
   font-style: normal;
   font-size: 16px;
+}
+.card p{
+     font-family: "Poppins", sans-serif;
+  font-weight: 300;
+  font-style: normal;
+  font-size: 12px;
+}
+.play{
+    position: absolute;
+    right: 1px;
+    bottom: 90px;
+
+}
+.card:hover{
+       background-color: rgba(128, 128, 128, 0.079);
+}
+.play-button {
+  background-color: #1fdf64;
+  border: none;
+  border-radius: 50%;
+  padding: 10px;
+  cursor: pointer;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  opacity: 0;
+  transition: all 1s ease-out;
+}
+
+.play-button svg {
+  fill: black;
+}
+.play-button:hover{
+    opacity: 1;
 }
