--- a/style.css
+++ b/style.css
@@ -1,295 +1,236 @@
 @import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
 
-body{
+body {
     background-color: rgb(0, 0, 0);
-   color: white
+    color: white
 }
-.left{
+
+.left {
     width: 25vw;
 }
-.right{
+
+.right {
     width: 75vw;
- background: linear-gradient(to bottom, rgb(38, 37, 37), black);
+    background: linear-gradient(to bottom, rgb(38, 37, 37), black);
     padding: 5px;
     margin: 0;
+    position: relative;
 }
-nav{
+
+nav {
     margin: 0px;
     height: 8vh;
     top: 0;
 }
-nav ul{
-     gap: 20px;
-}
-nav ul li{
-    list-style: none;
-   
-  
+
+nav ul {
+    gap: 20px;
 }
 
-.button{
+nav ul li {
+    list-style: none;
+}
+
+.button {
     background-color: rgba(58, 57, 57, 0.219);
     border-radius: 60%;
-   height: 40px;
+    height: 40px;
     width: 40px;
-    align-items: center;
-    display: flex;
-    justify-content: center;
-    padding: 2px;
 }
-.search{
+
+.search {
     background-color: rgba(58, 57, 57, 0.219);
     color: black;
-    border-radius: 20px ;
+    border-radius: 20px;
     height: 40px;
     width: 25vw;
-    align-content: center;
-    display: flex;
     justify-content: space-between;
-    padding: 0px 2px;
-    flex-wrap: wrap;
-    font-family: "Poppins", sans-serif;
-  font-weight: 400;
-  font-style: normal;
-
+    font-weight: 400;
 }
 
-.search div{
-     align-items: center;
+.search div {
+    padding: 10px;
 }
-#searchleft{
-  display: flex;
-  align-items: center;
-  padding: 10px;
-}
-#searchright{
-  display: flex;
-  align-items: center;
-  padding: 10px;
-}
-nav ol{
-   display: flex;
 
-}
-nav ol div{
-   display: flex;
-
-}
-nav ol div li{
+nav ol div li {
     padding: 0 5px;
     list-style: none;
     color: grey;
-        font-family: "Poppins", sans-serif;
-  font-weight: 700;
-  font-style: normal;
-  font-size: 16px;
+    font-weight: 700;
+    font-size: 16px;
 }
-.navright li{
-         padding: 0 15px;
+
+.navright li {
+    padding: 0 15px;
 }
-.navright{
-     display: flex;
-  align-items: center;
-  justify-content: center;
-      padding: 0 20px;
+
+.navright {
+    padding: 0 20px;
 }
-.navleft{
-     display: flex;
-  align-items: center;
-  justify-content: center;
+
+.nav {
+    justify-content: space-between;
 }
-.nav{
-    justify-content:space-between ;
-}
-.login{
-       background-color:white;
+
+.login {
+    background-color: white;
     color: black;
-    border-radius: 20px ;
+    border-radius: 20px;
     height: 43px;
     width: 5vw;
-       display: flex;
-    align-content: center;
-    justify-content: center;
     padding: 0px 2px;
     flex-wrap: wrap;
 }
-nav ol div li:hover{
+
+nav ol div li:hover {
     cursor: pointer;
     color: white;
-      font-size: 17px;
+    font-size: 17px;
 }
-.login:hover{
-      cursor: pointer;
+
+.login:hover {
+    cursor: pointer;
     color: black;
     height: 44px;
     width: 5.1vw;
 }
-.container{
-    margin: 0px;
-}
-.library{
+
+.library {
     background-color: rgba(128, 128, 128, 0.16);
     padding: 7px;
-    margin: 0;
-    /* height: 90vh; */
 }
-.heading{
-    display: flex;
-    align-items: center;
+
+.heading {
     justify-content: space-between;
-      font-family: "Poppins", sans-serif;
-  font-weight: 700;
-  font-style: normal;
-  font-size: 16px;
-  margin: 10px;
-  padding: 10px;
+    font-weight: 700;
+    font-size: 16px;
+    margin: 10px;
+    padding: 10px;
 }
-.firstplaylist{
-    background-color:rgba(128, 128, 128, 0.168) ;
+
+.firstplaylist {
+    background-color: rgba(128, 128, 128, 0.168);
     border-radius: 10px;
     margin: 15px;
     padding: 15px;
 }
-.firstplaylist > span{
-     font-family: "Poppins", sans-serif;
-      font-weight: 700;
-  font-style: normal;
-  font-size: 14px;
+
+.firstplaylist>span {
+    font-weight: 700;
+    font-size: 14px;
 }
-.firstplaylist > p{
-       font-family: "Poppins", sans-serif;
-  font-weight: 400;
-  font-style: normal;
-  font-size: 14px;
+
+.firstplaylist>p {
+    font-weight: 400;
+    font-size: 12px;
 }
-#playlistbutton{
-       background-color:white;
+
+#playlistbutton {
+    background-color: white;
     color: black;
-    border-radius: 20px ;
+    border-radius: 20px;
     height: 40px;
     width: 8vw;
-       display: flex;
-       flex-wrap: nowrap;
-    align-self: center;
-    justify-content: center;
-    /* padding: 5px; */
 }
-#playlistbutton > div{
-    padding: 8px;
-}
-.Podcast{
-    background-color:rgba(128, 128, 128, 0.168) ;
+
+.Podcast {
+    background-color: rgba(128, 128, 128, 0.168);
     border-radius: 10px;
     margin: 15px;
     padding: 15px;
 }
-.Podcast > span{
-     font-family: "Poppins", sans-serif;
-      font-weight: 700;
-  font-style: normal;
-  font-size: 14px;
+
+.Podcast>span {
+    font-weight: 700;
+    font-size: 14px;
 }
-.Podcast > p{
-       font-family: "Poppins", sans-serif;
-  font-weight: 400;
-  font-style: normal;
-  font-size: 14px;
+
+.Podcast>p {
+    font-weight: 400;
+    font-size: 14px;
 }
-#podcastbutton{
-       background-color:white;
+
+#podcastbutton {
+    background-color: white;
     color: black;
-    border-radius: 20px ;
+    border-radius: 20px;
     height: 40px;
-    width: 12vw;
-       display: flex;
-       flex-wrap: nowrap;
-    align-self: center;
-    justify-content: center;
-   
+    width: 10vw;
 }
-#podcastbutton > div{
+
+#podcastbutton>div {
     padding: 8px;
 }
-#podcastbutton:hover{
+
+#podcastbutton:hover {
     cursor: pointer;
 }
-#playlistbutton:hover{
+
+#playlistbutton:hover {
     cursor: pointer;
 }
-.other li{
+
+.other li {
     list-style: none;
     padding: 10px;
     margin: 0;
     font-size: 10px;
 }
-.other{
-    display: flex;
-    flex-flow: row;
-    flex-wrap: nowrap;
+
+.other {
     width: 25vw;
-     padding: 5px;
+    padding: 5px;
     margin: 0;
-     font-family: "Poppins", sans-serif;
 
 }
-div  h3{
+
+div h3 {
     font-size: 15px;
     padding: 10px;
-    margin: auto;
-    font-family: "Poppins", sans-serif; 
+    margin: 0px;
+    font-family: "Poppins", sans-serif;
 }
-div  h3:hover{
+
+div h3:hover {
     cursor: pointer;
     text-decoration: underline;
 }
-.language{
+
+.language {
     border: 1px solid white;
     border-radius: 20px;
-    display: flex;
-    align-items: center;
-    align-content: center;
-    justify-content: flex-start;
     width: 6vw;
     height: 25px;
     padding: 4px;
     margin: 5px;
-       font-family: "Poppins", sans-serif;
-      font-weight: 700;
-  font-style: normal;
-  font-size: 12px;
+    font-weight: 700;
+    font-size: 12px;
 }
-.language >div{
+
+.language>div {
     padding: 5px;
 }
-/* .add{
-    background-color: grey;
-    border-radius: 50%;
-    width: 40px;
-    height: 40px;
-    align-items: center;
-} */
 
-.header2{
-    display: flex;
-    align-items: center;
+.header2 {
     justify-content: space-between;
-      font-family: "Poppins", sans-serif;
-  font-weight: 700;
-  font-style: normal;
-  font-size: 20px;
-  margin: 10px;
-  padding: 10px;
+    font-weight: 700;
+    font-size: 20px;
+    margin: 10px;
+    padding: 10px;
 }
-.showall{
+
+.showall {
     font-size: 12px;
     color: grey;
 }
-.cardContainer div{
+
+.cardContainer div {
     padding: 20px;
     gap: 20px;
     margin: 10px;
 }
-.card{
+
+.card {
     width: 10vw;
     padding: 0px;
     border-radius: 7px;
@@ -300,46 +241,55 @@ div  h3:hover{
     /* height: 33vh; */
 }
 
-.card img{
+.card img {
     border-radius: 7px;
 }
-.card h2{
-     font-family: "Poppins", sans-serif;
-  font-weight: 300;
-  font-style: normal;
-  font-size: 16px;
+
+.card h2 {
+    font-weight: 300;
+    font-size: 16px;
 }
-.card p{
-     font-family: "Poppins", sans-serif;
-  font-weight: 300;
-  font-style: normal;
-  font-size: 12px;
+
+.card p {
+    font-weight: 300;
+    font-size: 12px;
 }
-.play{
+
+.play {
     position: absolute;
     right: 1px;
     bottom: 90px;
 
 }
-.card:hover{
-       background-color: rgba(128, 128, 128, 0.079);
+
+.card:hover {
+    background-color: rgba(128, 128, 128, 0.079);
+
+    .play-button {
+        opacity: 1;
+    }
 }
+
 .play-button {
-  background-color: #1fdf64;
-  border: none;
-  border-radius: 50%;
-  padding: 10px;
-  cursor: pointer;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  opacity: 0;
-  transition: all 1s ease-out;
+    background-color: #1fdf64;
+    border: none;
+    border-radius: 50%;
+    padding: 10px;
+    cursor: pointer;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    opacity: 0;
+    transition: all 1s ease-out;
 }
 
 .play-button svg {
-  fill: black;
+    fill: black;
 }
-.play-button:hover{
-    opacity: 1;
+.playbar{
+    bottom: 0;
+    position: absolute;
+    background-color: rgb(139, 193, 139);
+    width: 100%;
+    padding: 12px;
 }
