--- a/style.css
+++ b/style.css
@@ -1,8 +1,13 @@
 @import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
 
+html, body {
+  height: 100%;
+  margin: 0;
+  padding: 0;
+}
 body {
     background-color: rgb(0, 0, 0);
-    color: white
+    color: white;
 }
 
 .left {
@@ -15,12 +20,20 @@ body {
     padding: 5px;
     margin: 0;
     position: relative;
+  height: calc(100vh - 8vh); /* 8vh is your nav height */
+
+  overflow-y: auto; /* allow scrolling when needed */
+  overflow-x: hidden;
+}
+.container {
+  height: calc(100vh - 8vh); /* Adjust for nav */
 }
 
 nav {
     margin: 0px;
     height: 8vh;
     top: 0;
+    position: sticky;
 }
 
 nav ul {
@@ -170,18 +183,19 @@ nav ol div li:hover {
     cursor: pointer;
 }
 
-.other li {
+.other a {
     list-style: none;
     padding: 10px;
     margin: 0;
     font-size: 10px;
+    text-decoration:none;
+    color: white;
 }
 
 .other {
     width: 25vw;
     padding: 5px;
     margin: 0;
-
 }
 
 div h3 {
@@ -189,11 +203,15 @@ div h3 {
     padding: 10px;
     margin: 0px;
     font-family: "Poppins", sans-serif;
+    text-decoration:underline;
+    color: white;
+    text-decoration-color: white;
 }
 
 div h3:hover {
     cursor: pointer;
     text-decoration: underline;
+    text-decoration-color: white;
 }
 
 .language {
@@ -255,7 +273,7 @@ div h3:hover {
     font-size: 12px;
 }
 
-.play {
+.playdiv {
     position: absolute;
     right: 1px;
     bottom: 90px;
@@ -288,8 +306,42 @@ div h3:hover {
 }
 .playbar{
     bottom: 0;
-    position: absolute;
-    background-color: rgb(139, 193, 139);
-    width: 100%;
+    position: fixed;
+    background-color: rgb(0, 0, 0);
+    width: 71vw;
     padding: 12px;
 }
+.song-buttons{
+    gap: 24px;
+}
+
+.songList button{
+    list-style: none;
+    border: 1px solid rgba(0, 0, 0, 0);
+    padding: 10px;
+    margin: 5px;
+    width: 20vw;
+    background-color: rgba(0, 0, 0, 0) ;
+    color: white;
+    border-radius: 5px;
+}
+.songList button:hover{
+    background-color: rgba(128, 128, 128, 0.079);
+}
+.songList ul{
+  display: grid;
+  grid-template-columns: repeat(3, 1fr); /* 3 columns */
+  grid-auto-rows: 50px; /* adjust height as needed */
+  gap: 0px;
+  list-style: none;
+  padding: 0;
+  margin: 0 ;
+  max-width: 100vw; /* optional: control total width */
+}
+.songList h2{
+    padding: 10px;
+    margin: 10px;
+}
+
+
+
