--- a/styleupdated.css
+++ b/styleupdated.css
@@ -71,7 +71,6 @@ nav ul li {
     border-radius: 20px;
     height: 40px;
     width: 25vw;
-    filter: invert(1);
     justify-content: space-between;
     font-weight: 400;
 }
@@ -427,69 +426,7 @@ div h3:hover {
     }
 
     .library {
-        z-index: 1;
-        height: 95vh;
-        width: 98%;
-        margin: auto;
-    }
-
-    .right {
-        width: 100vw;
-    }
-
-    .playbar {
-        width: 100vh;
-    }
-
-    .hamburger {
-        display: block;
-    }
-
-    #playlistbutton {
-        background-color: white;
-        color: black;
-        border-radius: 20px;
-        height: 40px;
-        width: 12vw;
-    }
-
-    #podcastbutton {
-        background-color: white;
-        color: black;
-        border-radius: 20px;
-        height: 40px;
-        width: 16vw;
-    }
-
-    .language {
-        width: 10vw;
-    }
-
-    nav ol {
-        position: absolute;
-        right: -100%;
-    }
-
-    nav ul .search {
-        width: 35vw;
-    }
-}
-
-@media (max-width: 1400px) {
-    .left {
-        position: absolute;
-        left: -130%;
-        transition: all .3s;
-        z-index: 1;
-        width: 365px;
-        background-color: black;
-        padding: 0;
-        top: 0;
-        border-radius: 7px;
-    }
-
-    .library {
-        z-index: 1;
+        z-index:1 ;
         height: 95vh;
         width: 98%;
         margin: auto;
@@ -538,91 +475,46 @@ div h3:hover {
 }
 
 @media (max-width: 800px) {
-    .nav {
-        background-color: black;
+    .nav{
+        background-color: #1fdf64;
     }
-
-    .cardContainer {
+    .cardContainer{
         flex-flow: column;
         justify-content: center;
         align-items: center;
     }
-
-    .card {
+    .card{
         width: 60vw;
         height: 40vh;
         justify-content: center;
     }
-
-    .card img {
+    .card img{
         height: 30vh;
     }
-
-    .card h2 {
+    .card h2{
         font-size: 24px;
     }
-
-    .card p {
+    .card p{
         font-size: 18px;
     }
-
-    .songList ul {
+    .songList ul{
         display: flex;
         flex-flow: column;
     }
-
-    .songList ul button {
-        width: 90vw;
+    .songList ul button{
+        width: 90vw ;
     }
-
-    .header2 {
-        font-size: 24px;
+    .header2{
+        font-size:24px ;
     }
-
-    nav ol {
+        nav ol {
         position: absolute;
         right: -200%;
     }
-
-    .search {
-       background-color: white;
+    .search .text{
+        opacity: 0;
     }
-
-    .searchleft {
-        display: none;
+    .search .searchright .browse{
+        opacity: 0;
     }
-
-    #searchright {
-        display: none;
-    }
-    .playbar{
-        position: absolute;
-        width: 100vw;
-    }
-    .left{
-        width: 310px;
-    }
-   #playlistbutton {
-        background-color: white;
-        color: black;
-        border-radius: 20px;
-        height: 40px;
-        width: 32vw;
-    }
-
-    #podcastbutton {
-        background-color: white;
-        color: black;
-        border-radius: 20px;
-        height: 40px;
-        width: 36vw;
-
-    }
-    .language{
-        width: 20vw;
-    }
-    .other{
-        width: 90vw;
-    }
-
 }
