--- a/style.css
+++ b/style.css
@@ -413,6 +413,14 @@ div h3:hover {
     width: 80vw;
 }
 
+/* input[type="range"]::-webkit-slider-runnable-track {
+            background:grey ;
+           border-radius: 20px;
+           height: .5rem;
+        }
+  input[type='range']::-webkit-slider-thumb {
+      width: 0px;
+    } */
 
 @media (max-width: 1400px) {
     .left {
@@ -433,7 +441,7 @@ div h3:hover {
         height: 40vh;
         justify-content: center;
         align-items: center;
-        
+
     }
 
     .card img {
@@ -550,7 +558,7 @@ div h3:hover {
     }
 
     .search {
-       background-color: white;
+        background-color: white;
     }
 
     .searchleft {
@@ -560,14 +568,17 @@ div h3:hover {
     #searchright {
         display: none;
     }
-    .playbar{
+
+    .playbar {
         position: absolute;
-        width: 90vw;
+        width: 97vw;
     }
-    .left{
+
+    .left {
         width: 310px;
     }
-   #playlistbutton {
+
+    #playlistbutton {
         background-color: white;
         color: black;
         border-radius: 20px;
@@ -583,11 +594,30 @@ div h3:hover {
         width: 36vw;
 
     }
-    .language{
+
+    .language {
         width: 20vw;
     }
-    .other{
+
+    .other {
         width: 90vw;
+    }
+
+    .volume {
+        margin: 0px;
+    }
+
+    .range {
+        cursor: pointer;
+    }
+
+    .abovebar {
+        display: flex;
+        flex-flow: column;
+    }
+    .timevol{
+        display: flex;
+        gap: 70px;
     }
 
 }
